Add jwt token
