# cmd/services/v1/auth/main.go
@@ -2,9 +2,9 @@ package main
 
 import (
     "github.com/gin-gonic/gin"
-    "astrovia-api-go/internal/packages/db"
-    "astrovia-api-go/internal/services/user/handlers"
-    "astrovia-api-go/internal/middlewares"
+    "app/internal/packages/db"
+    auth "app/internal/services/v1/auth/handlers"
+    "app/internal/middlewares"
 )
 
 func main() {
@@ -14,11 +14,7 @@ func main() {
     r.Use(middlewares.RequestID())
     r.Use(middlewares.ErrorHandler())
 
-    r.GET("/users", handlers.GetUsers)
-    r.GET("/users/:id", handlers.GetUserByID)
-    r.POST("/users", handlers.CreateUser)
-    r.PUT("/users/:id", handlers.UpdateUser)
-    r.DELETE("/users/:id", handlers.DeleteUser)
+    r.POST("/v1/generate-token", auth.Auth)
 
-    r.Run("127.0.0.1:2001")
+    r.Run("127.0.0.1:2002")
 }
